--- a/nosotros.html
+++ b/nosotros.html
@@ -186,7 +186,7 @@
       <div class="uk-container uk-container-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
         <div class="uk-flex uk-flex-space-around uk-flex-wrap">
           <div class="uk-margin-bottom uk-container uk-text-center">
-            <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="inicio.html">EL BRASERO</a></h4>
+            <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="index.html">EL BRASERO</a></h4>
             <h4 class="uk-margin-small-top">&copy; 2016</h4>
           </div>
           <div class="uk-margin-bottom uk-container uk-text-center">
