--- a/platos.html
+++ b/platos.html
@@ -51,38 +51,50 @@
     </div>
 
     <div class="uk-block uk-block-muted">
-      <div class="uk-container uk-container-center">
-        <h4 class="uk-h2">Explora la Carta</h4>
+      <div class="uk-container uk-container-center uk-text-center">
+        <h2 class="uk-h1">Explora la Carta</h4>
         <div class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin>
           <div>
             <img src="assets/images/platos/plato1.jpg" alt="">
-            <h4 class="uk-h3">Pollo a la brasa</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Pollo a la brasa</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
           <div>
             <img src="assets/images/platos/plato2.jpg" alt="">
-            <h4 class="uk-h3">Filete a la Plancha</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Filete a la Plancha</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
           <div>
             <img src="assets/images/platos/plato3.jpg" alt="">
-            <h4 class="uk-h3">Churrasco a lo Pobre</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Churrasco a lo Pobre</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
           <div>
             <img src="assets/images/platos/plato4.jpg" alt="">
-            <h4 class="uk-h3">Ceviche Mixto</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Ceviche Mixto</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
           <div>
             <img src="assets/images/platos/plato5.jpg" alt="">
-            <h4 class="uk-h3">Pan con Chicharron</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Pan con Chicharron</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
           <div>
             <img src="assets/images/platos/plato6.jpg" alt="">
-            <h4 class="uk-h3">Anticucho</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <div class="uk-panel-box uk-block-default">
+              <h4 class="uk-h3">Anticucho</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+            </div>
           </div>
         </div>
       </div>
@@ -92,7 +104,7 @@
       <div class="uk-container uk-container-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
         <div class="uk-flex uk-flex-space-around uk-flex-wrap">
           <div class="uk-margin-bottom uk-container uk-text-center">
-            <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="inicio.html">EL BRASERO</a></h4>
+            <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="index.html">EL BRASERO</a></h4>
             <h4 class="uk-margin-small-top">&copy; 2016</h4>
           </div>
           <div class="uk-margin-bottom uk-container uk-text-center">
@@ -113,5 +125,6 @@
         </div>
       </div>
     </div>
+    <div class="uk-block uk-block-secondary uk-padding-top-remove"></div>
   </body>
 </html>
