--- a/platos.html
+++ b/platos.html
@@ -21,6 +21,7 @@
     <script src="vendor/uikit/js/uikit.min.js"></script>
     <script src="vendor/uikit/js/components/slideshow.min.js"></script>
     <script src="vendor/uikit/js/components/sticky.min.js"></script>
+    <script src="vendor/uikit/js/components/lightbox.min.js"></script>
   </head>
   <body>
     <div class="uk-block uk-block-large uk-cover-background" style="background-image: url('assets/images/master/header-bg.jpg')">
@@ -55,44 +56,68 @@
         <h2 class="uk-h1">Explora la Carta</h4>
         <div class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin>
           <div>
-            <img src="assets/images/platos/plato1.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato1.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato1.jpg" data-uk-lightbox title="Pollo a la Brasa"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
               <h4 class="uk-h3">Pollo a la brasa</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
-            <img src="assets/images/platos/plato2.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato2.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato2.jpg" data-uk-lightbox title="Filete a la Plancha"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
               <h4 class="uk-h3">Filete a la Plancha</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
-            <img src="assets/images/platos/plato3.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato3.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato3.jpg" data-uk-lightbox title="Churrasco a lo Pobre"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
               <h4 class="uk-h3">Churrasco a lo Pobre</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
-            <img src="assets/images/platos/plato4.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato4.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato4.jpg" data-uk-lightbox title="Ceviche Mixto"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
               <h4 class="uk-h3">Ceviche Mixto</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
-            <img src="assets/images/platos/plato5.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato5.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato5.jpg" data-uk-lightbox title="Pan con Chicharron"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
               <h4 class="uk-h3">Pan con Chicharron</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
-            <img src="assets/images/platos/plato6.jpg" alt="">
+            <figure class="uk-overlay uk-overlay-hover">
+              <img class="uk-overlay-scale" src="assets/images/platos/plato6.jpg" alt="">
+              <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background uk-overlay-icon"></div>
+              <a class="uk-position-cover" href="assets/images/platos/plato6.jpg" data-uk-lightbox title="Anticuchos"></a>
+            </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Anticucho</h4>
+              <h4 class="uk-h3">Anticuchos</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
