add text modficier

--- a/platos.html
+++ b/platos.html
@@ -62,8 +62,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato1.jpg" data-uk-lightbox title="Pollo a la Brasa"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Pollo a la brasa</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Pollo a la brasa</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
@@ -73,8 +73,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato2.jpg" data-uk-lightbox title="Filete a la Plancha"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Filete a la Plancha</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Filete a la Plancha</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
@@ -84,8 +84,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato3.jpg" data-uk-lightbox title="Churrasco a lo Pobre"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Churrasco a lo Pobre</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Churrasco a lo Pobre</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
@@ -95,8 +95,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato4.jpg" data-uk-lightbox title="Ceviche Mixto"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Ceviche Mixto</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Ceviche Mixto</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
@@ -106,8 +106,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato5.jpg" data-uk-lightbox title="Pan con Chicharron"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Pan con Chicharron</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Pan con Chicharron</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
           <div>
@@ -117,8 +117,8 @@
               <a class="uk-position-cover" href="assets/images/platos/plato6.jpg" data-uk-lightbox title="Anticuchos"></a>
             </figure>
             <div class="uk-panel-box uk-block-default">
-              <h4 class="uk-h3">Anticuchos</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+              <h4 class="uk-h3 uk-text-bold">Anticuchos</h4>
+              <p class="uk-text-slim">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
           </div>
         </div>
