--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
                   </div>
                   <div>
                     <h3 class="uk-h2">DIRECCIÓN:</h3>
-                    <p class="uk-text-muted">
+                    <p class="uk-text-muted uk-text-slim">
                       Av. Venezuela 718, Breña. <br>
                       Lima, Perú.</p>
                     </div>
@@ -81,7 +81,7 @@
                     </div>
                     <div>
                       <h3 class="uk-h2">HORARIO DE ATENCIÓN:</h3>
-                      <p class="uk-text-muted">
+                      <p class="uk-text-muted uk-text-slim">
                         Lunes a domingo: <br>
                         9:00 a.m. - 3:30 a.m. <br>
                       </p>
@@ -95,7 +95,7 @@
                     </div>
                     <div>
                       <h3 class="uk-h2">EMAIL:</h3>
-                      <p class="uk-text-muted">informes@elbrasero.com</p>
+                      <p class="uk-text-muted uk-text-slim">informes@elbrasero.com</p>
                     </div>
                   </div>
                 </div>
