--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><img src="assets/images/home/slide2.jpg" alt=""></li>
         <li><img src="assets/images/home/slide3.jpg" alt=""></li>
       </ul>
-      <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle">
+      <div class="uk-position-cover uk-overlay-background uk-flex uk-flex-center uk-flex-middle">
         <h1 class="uk-text-xlarge uk-text-contrast text-krona uk-text-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">EL BRASERO</h1>
       </div>
       <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideshow-item="previous"></a>
@@ -178,8 +178,9 @@
       </div>
     </section>
 
-    <section class="uk-block uk-block-large uk-contrast uk-cover-background" style="background-image: url('assets/images/home/bg.jpg')">
-      <div class="uk-container uk-container-center uk-text-center">
+    <section class="uk-position-relative uk-block uk-block-large uk-contrast uk-cover-background" style="background-image: url('assets/images/home/bg.jpg')">
+      <div class="uk-position-cover uk-overlay-background"></div>
+      <div class="uk-container uk-container-center uk-text-center uk-position-relative">
         <h4 class="uk-heading-large text-krona">MEJORES<br>PLATOS</h4>
         <p class="uk-text-large">
           Ceplicaboserde miuas nerafae kertyerauas vitaesa eniptaiad esertyatya nemo
