--- a/platos.html
+++ b/platos.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="uk-block uk-block-muted">
-      <div class="uk-container uk-container-center uk-text-center">
+      <div class="uk-container uk-container-center uk-text-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-left' }">
         <h2 class="uk-h1">Explora la Carta</h4>
         <div class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin>
           <div>
