Footer soscial links fix

--- a/platos.html
+++ b/platos.html
@@ -133,11 +133,11 @@
             <h4 class="uk-margin-small-top">&copy; 2016</h4>
           </div>
           <div class="uk-margin-bottom uk-container uk-text-center">
-            <a class="uk-icon-button uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
-            <a class="uk-icon-button uk-icon-twitter uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-google-plus uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-pinterest-p uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-instagram uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-facebook uk-margin-small-right" target="_blank" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
+            <a class="uk-icon-button uk-icon-twitter uk-margin-small-right" target="_blank" href="https://twitter.com/?lang=es"></a>
+            <a class="uk-icon-button uk-icon-google-plus uk-margin-small-right" target="_blank" href="https://plus.google.com/collections/featured"></a>
+            <a class="uk-icon-button uk-icon-pinterest-p uk-margin-small-right" target="_blank" href="https://es.pinterest.com/"></a>
+            <a class="uk-icon-button uk-icon-instagram uk-margin-small-right" target="_blank" href="https://www.instagram.com/"></a>
           </div>
           <div class="uk-margin-bottom uk-container uk-text-slim">
             <p class="uk-text-muted uk-h2">
